<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:label="@string/home"
        android:name="com.amcd.unity.fragments.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/gameFragment"
        android:label="@string/game"
        android:name="com.amcd.unity.fragments.GameFragment"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/scoreFragment"
        android:label="@string/score"
        android:name="com.amcd.unity.fragments.ScoreFragment"
        tools:layout="@layout/fragment_score" />

</navigation>