<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_light_grey"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingBottom="30dp"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/home_tab_title"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            style="@style/TextSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/home_tab_welcome_message"
            android:textColor="@color/app_grey" />

        <TextView
            android:id="@+id/screenshots_title"
            style="@style/Header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/screenshots_title"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/app_orange"
            app:strokeWidth="3dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/screen_shot_main_menu" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/app_orange"
            app:strokeWidth="3dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"

                android:scaleType="centerCrop"
                android:src="@drawable/screenshot_gameplay" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/app_orange"
            app:strokeWidth="3dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/screenshot_game_over" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>